страница карточка товара

--- a/order-processing.html
+++ b/order-processing.html
@@ -121,17 +121,27 @@
 							</svg></div>
 						<div class="section-order-reserve__top">
 							<div class="section-order-reserve__title-inner">
-								<p class="text text_fs-50 text_fs-xl-54 text_wet-asphalt text_fw-900 text_lh-1 section-order-reserve__title">Оформление заказа</p>
+								<p class="text text_fs-50 text_fs-xl-54 text_wet-asphalt text_fw-900 text_lh-1 section-order-reserve__title">Резерв</p>
 								<div class="section-order-reserve__line-big"></div>
 							</div>
-							<p class="text text_fs-20 text_wet-asphalt text_fw-300 text_lh-1-2 section-order-reserve__text">№1605221-RSRV</p>
+							<p class="text text_fs-20 text_wet-asphalt text_fw-300 text_lh-1-2 section-order-reserve__text-room">№1605221-RSRV</p>
 						</div>
 						<div class="section-order-reserve__line-small"></div>
 						<div class="accordion">
-							<div class="accordion__title">1. Способ доставки</div>
+							<div class="accordion__title">1. Резерв товара</div>
 							<div class="accordion__body">
-								<p class="text text_wet-asphalt-80 text_fw-500 text_lh-1-29 section-order-reserve__text-info-period-days">Выберите удобный для вас способ резерва</p>
+								<p class="text text_wet-asphalt-80 text_fw-500 text_lh-1-29 section-order-reserve__text-info-period-days">Выберите удобный для вас способ доставки</p>
 								<div>
+									<div class="tabs tabs_button">
+										<div class="tabs__buttons"><button class="tabs__button js-active" data-tab-button="1">Самовывоз</button><button class="tabs__button" data-tab-button="2">Доставка</button></div>
+										<div class="tabs__body"></div>
+									</div>
+									<div class="tabs__content js-active" data-tab-content="1">
+										<div class="section-order-reserve__ffff"></div>
+									</div>
+									<div class="tabs__content" data-tab-content="2">
+										<div class="section-order-reserve__ffff"></div>
+									</div>
 									<p class="text text_fs-18 text_wet-asphalt text_fw-800 text_lh-1-1 section-order-reserve__reserve-condition-title">Условия резерва</p>
 									<p class="text text_fs-10 text_wet-asphalt-70 text_fw-300 text_lh-1-4 section-order-reserve__reserve-condition-text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p>
 								</div>
@@ -143,20 +153,18 @@
 							<div class="accordion__body"><button class="section-order-reserve__accordion-btn">Войти</button>
 								<p class="text text_wet-asphalt-80 text_fw-300 text_lh-1-29 section-order-reserve__info-way">Заполните данные для оформления заказа</p>
 								<div class="tabs tabs_button">
-									<div class="tabs__buttons"><button class="tabs__button js-active" data-tab-button="1">Юр. лицо</button><button class="tabs__button" data-tab-button="2">Физ. лицо</button></div>
+									<div class="tabs__buttons"><button class="tabs__button js-active" data-tab-button="1">Самовывоз</button><button class="tabs__button" data-tab-button="2">Доставка</button></div>
 									<div class="tabs__body">
 										<div class="tabs__content js-active" data-tab-content="1">
-											<div class="section-order-reserve__ffff">
-												<p class="text text_wet-asphalt-80 text_fw-300 text_lh-1-14 section-order-reserve__text-data-registration">Выберите юридическое лицо, если заказ будет оформляться на ИП или ООО</p>
+											<div class="section-order-reserve__ffff"><span class="text"></span>
 												<form class="section-order-reserve__form"><label class="section-order-reserve__field-item section-order-reserve__field-item_field-m"><input class="section-order-reserve__item-inn" required="required" /><span>ИНН*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-m"><input required="required" /><span>Название компании</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Имя*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Фамилия*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Моб. телефон*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-x"><input required="required" /><span>Адрес доставки</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>E-mail</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-t"><textarea required="required"></textarea><span>Комментарий к заказу</span></label></form>
 												<div class="section-order-reserve__item-btn">Сохранить</div>
-												<div class="section-order-reserve__reserve-condition-title">Конфеденциальность личных данных</div>
-												<div class="section-order-reserve__reserve-condition-text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</div>
+												<p class="text text_fs-18 text_wet-asphalt text_fw-800 text_lh-1-1 section-order-reserve__reserve-condition-title">Конфеденциальность личных данных</p>
+												<p class="text text_fs-10 text_wet-asphalt-70 text_fw-300 text_lh-1-4 section-order-reserve__reserve-condition-text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p>
 											</div>
 										</div>
 										<div class="tabs__content" data-tab-content="2">
-											<div class="section-order-reserve__ffff">
-												<p class="text text_wet-asphalt-80 text_fw-300 text_lh-1-14 section-order-reserve__text-data-registration">Выберите физическое лицо, если заказ будет оформляться на частное лицо</p>
+											<div class="section-order-reserve__ffff"><span class="text"></span>
 												<form class="section-order-reserve__form"><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Имя*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Фамилия*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Моб. телефон*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-x"><input required="required" /><span>Адрес доставки</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>E-mail</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-t"><textarea required="required"></textarea><span>Комментарий к заказу</span></label></form>
 												<div class="section-order-reserve__item-btn">Сохранить</div>
 												<div class="section-order-reserve__reserve-condition-title">Конфеденциальность личных данных</div>
@@ -174,11 +182,11 @@
 							<div class="accordion__body">
 								<div class="section-order-reserve__info-way">Заполните данные для оформления заказа</div>
 								<div class="section-order-reserve__сompletion-reserve">
-									<div>Заказ №210522/1-MT</div>
-									<div>ИП Петров Иван</div>
+									<div class="section-order-reserve__сompletion-reserve-room">Заказ №210522/1-MT</div>
+									<div class="section-order-reserve__сompletion-reserve-name">ИП Петров Иван</div>
 								</div>
 								<div class="section-order-reserve__line-сompletion"></div>
-								<div class="accordion">
+								<div class="accordion accordion_fz-25">
 									<div class="accordion__title">Состав заказа</div>
 									<div class="accordion__body">
 										<div class="section-order-reserve__order-list">
@@ -249,13 +257,16 @@
 										<p class="section-order-reserve__total section-order-reserve__total_days">≈ 4,548 т</p>
 									</div>
 									<div class="section-order-reserve__summ section-order-reserve__summ_center">
-										<p class="section-order-reserve__total section-order-reserve__total_bold">Всего наимнований (7) на сумму 6 233 944 руб. (в том числе НДС 20%)</p>
+										<p class="section-order-reserve__total section-order-reserve__total_bold">Всего наимнований (7) на сумму 6 233 944 руб.(в том числе НДС 20%)</p>
 										<p class="section-order-reserve__total section-order-reserve__total_small">Сто пятьдесят восемь миллионов двести тридцать три тысячи девятьсот сорок четыре руб. 00 копеек</p>
 									</div>
 									<div class="section-order-reserve__summ section-order-reserve__summ_right">
 										<div class="section-order-reserve__warning-text">Копия документов на оплату отправлена на вашу электронную почту. В течении ближайшего времени с вами свяжеться менеджер, чтобы обсудить делали заказа.</div>
+										<div class="section-order-reserve__pdf-inner"><a class="section-order-reserve__pdf-text">Бланк заказа PDF</a>
+											<div class="section-order-reserve__active-until-text">(действителен до 21.05.2022)</div>
+										</div>
 									</div>
-								</div>
+								</div><button class="section-order-reserve__btn-cart section-order-reserve__btn-cart_reserve-completion">Завершить оформление</button>
 							</div>
 						</div>
 						<div class="section-order-reserve__line-small"></div>
@@ -281,10 +292,11 @@
 					</div>
 					<div class="block-layout__right">
 						<div class="section-order-reserve__order section-order-reserve__order_col">
-							<div class="section-order-reserve__number">Завершите оформление</div>
-							<div class="section-order-reserve__room">Гость</div>
+							<div class="section-order-reserve__number-right">Завершите оформление</div>
+							<div class="section-order-reserve__text-right">Завершите оформление, выбрав варианты резерва, заполнив контакты и выбрав способ оплаты (онлайн/счет/в офисе)</div>
+							<div class="section-order-reserve__room-right">ИП Петров Иван</div>
 						</div>
-						<div class="section-order-reserve__line-small section-order-reserve__line-small_fat"></div>
+						<div class="section-order-reserve__line-right-small section-order-reserve__line-right-small_fat"></div>
 						<div class="section-order-reserve__call section-order-reserve__call_col">
 							<div class="section-order-reserve__summ section-order-reserve__summ_top">
 								<p class="section-order-reserve__total">Итого:</p>
@@ -295,10 +307,10 @@
 								<p class="section-order-reserve__total section-order-reserve__total_days">≈ 4,548 т</p>
 							</div>
 							<div class="section-order-reserve__summ section-order-reserve__summ_center">
-								<p class="section-order-reserve__total section-order-reserve__total_bold">Всего наимнований (7) на сумму 6 233 944 руб. (в том числе НДС 20%)</p>
+								<p class="section-order-reserve__total section-order-reserve__total_bold">Всего наимнований (7) на сумму 6 233 944 руб.(в том числе НДС 20%)</p>
 								<p class="section-order-reserve__total section-order-reserve__total_small14px">Сто пятьдесят восемь миллионов двести тридцать три тысячи девятьсот сорок четыре руб. 00 копеек</p>
 							</div>
-						</div><button class="section-order-reserve__btn-cart section-order-reserve__btn-cart_order">Оформить заказ</button><button class="section-order-reserve__btn-cart section-order-reserve__btn-cart_reserve">Оплатить резерв</button>
+						</div><button class="section-order-reserve__btn-cart section-order-reserve__btn-cart_order" disabled="disabled">Оформить заказ</button><button class="section-order-reserve__btn-cart section-order-reserve__btn-cart_reserve" disabled="disabled">Оформить заказ</button>
 						<div class="section-order-reserve__txt-onclick">Нажимая вы соглашаетесь с условиями и политикой конфеденциальности</div>
 					</div>
 				</div>
