--- a/product-details.html
+++ b/product-details.html
@@ -89,6 +89,239 @@
 				<div class="section-breadcrumbs__inner"><a class="section-breadcrumbs__link" href="/" data-popup-open="payment-entity">Главная</a><span class="section-breadcrumbs__link">/</span><span class="section-breadcrumbs__link" data-popup-open="pay-check">Информация о товаре</span></div><a class="section-breadcrumbs__back" href="#" data-popup-open="payment">Назад</a>
 			</section>
 		</div>
+		<section class="section-product-details block-layout block-layout_none-right">
+			<div class="container">
+				<div class="row rg-30 align-items-start">
+					<div class="block-layout__left">
+						<div class="section-product-details__header"><a class="section-product-details__category" href="#">Арматурный прокат</a>
+							<p class="section-product-details__articule">Арт. 0000545-MT</p>
+						</div>
+						<h2 class="section-product-details__product-title">Лист горячекатный, 60мм, 1500х600 (A240)</h2>
+						<h2 class="section-product-details__product-subtitle">Просечно-вытяжной лист, 16 мм (изготавливается по технологии горячекатного листа)</h2>
+						<div class="section-product-details__information-block">
+							<div class="accordion-list">
+								<div class="accordion accordion_fz-20 accordion_reset">
+									<div class="accordion__title">Характеристики</div>
+									<div class="accordion__body">
+										<div class="accordion-list__list-wrapper"><a class="accordion-list__link" href="#">Категория А240</a><a class="accordion-list__link" href="#">Лист горячекатный</a><a class="accordion-list__link" href="#">В листах</a><a class="accordion-list__link" href="#">Стандарт ГОСТ 34028-2016</a></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="section-product-details__categories"><a class="section-product-details__category-value" href="#">Категория А240</a><a class="section-product-details__category-value" href="#">Лист горячекатный</a><a class="section-product-details__category-value" href="#">В листах</a><a class="section-product-details__category-value" href="#">Стандарт ГОСТ 34028-2016</a></div>
+						<div class="section-product-details__main">
+							<div class="section-product-details__product-slider">
+								<div class="product-swiper gallery-top">
+									<div class="swiper-wrapper">
+										<div class="swiper-slide"><img src="https://swiperjs.com/demos/images/nature-1.jpg" alt="img" /></div>
+										<div class="swiper-slide"><img src="https://swiperjs.com/demos/images/nature-2.jpg" alt="img" /></div>
+										<div class="swiper-slide"><img src="https://swiperjs.com/demos/images/nature-3.jpg" alt="img" /></div>
+									</div>
+									<div class="swiper-button-next"></div>
+									<div class="swiper-button-prev"></div>
+								</div>
+								<div class="product-swiper gallery-thumbs">
+									<div class="swiper-wrapper">
+										<div class="swiper-slide"><img src="https://swiperjs.com/demos/images/nature-1.jpg" alt="img" /></div>
+										<div class="swiper-slide"><img src="https://swiperjs.com/demos/images/nature-2.jpg" alt="img" /></div>
+										<div class="swiper-slide"><img src="https://swiperjs.com/demos/images/nature-3.jpg" alt="img" /></div>
+									</div>
+								</div>
+							</div>
+							<div class="section-product-details__product-information">
+								<div class="section-product-details__product-information-wrapper">
+									<div class="select"><button class="select__button">Диаметр, 60 мм</button>
+										<div class="select__option-wrapper">
+											<p class="select__option" value="Толщина, 10 мм">Толщина, 10 мм</p>
+											<p class="select__option" value="Толщина, 20 мм">Толщина, 20 мм</p>
+											<p class="select__option" value="Толщина, 30 мм">Толщина, 30 мм</p>
+											<p class="select__option" value="Толщина, 40 мм">Толщина, 40 мм</p>
+											<p class="select__option" value="Толщина, 50 мм">Толщина, 50 мм</p>
+										</div>
+									</div>
+									<div class="section-product-details__item-wrapper">
+										<div class="product-item">
+											<div class="product-item__column">
+												<p class="text">60 мм</p>
+												<p class="text">1500 x 600 мм</p>
+											</div>
+											<div class="product-item__column">
+												<p class="text">за 1 тонну</p>
+												<p class="text">115 400 р.</p>
+											</div>
+											<div class="product-item__column">
+												<p class="text">за 1 м2</p>
+												<p class="text">12 400 р.</p>
+											</div>
+											<div class="product-item__column">
+												<p class="text">за 1 лист</p>
+												<p class="text">35 800 р.</p>
+											</div>
+											<div class="product-item__basket-wrapper">
+												<p class="product-item__basket-description">Добавьте в корзину и рассчитайте точный необходимий обьем</p>
+												<div class="product-item__basket-img" data-popup-open="product-item-details"><svg width="69" height="65" viewBox="0 0 69 65" xmlns="http://www.w3.org/2000/svg">
+														<defs>
+															<clipPath id="dl3q6myura">
+																<path d="M4500 0v5500H0V0h4500z" />
+															</clipPath>
+															<clipPath id="a5dmji0u5b">
+																<path d="M9.36 0a7.516 7.516 0 0 1 7.375 6.05l1.363 6.846h47.384a3.24 3.24 0 0 1 2.457 1.1c.62.71.897 1.654.763 2.586l-3.22 22.706c-.859 5.83-5.858 10.15-11.745 10.146H28.51a11.81 11.81 0 0 1-11.56-9.512L10.432 7.308a1.073 1.073 0 0 0-1.074-.86H0V0zm52.407 19.344h-42.38l3.865 19.343a5.37 5.37 0 0 0 5.259 4.299h25.163a5.37 5.37 0 0 0 5.367-4.61l2.726-19.032z" />
+															</clipPath>
+															<clipPath id="hx4p2o3vkc">
+																<path d="M8.588 4.298c0 5.73-8.588 5.73-8.588 0s8.588-5.73 8.588 0z" />
+															</clipPath>
+														</defs>
+														<g fill="currentColor" clip-path="url(#dl3q6myura)" transform="translate(-2284 -595)">
+															<g>
+																<g clip-path="url(#a5dmji0u5b)" transform="translate(2284 595.522)">
+																	<path d="M0 0h68.735v49.434H0V0z" />
+																</g>
+																<g clip-path="url(#hx4p2o3vkc)" transform="translate(2338.747 651.405)">
+																	<path d="M0 0h8.588v8.595H0V0z" />
+																</g>
+																<g clip-path="url(#hx4p2o3vkc)" transform="translate(2302.25 651.405)">
+																	<path d="M0 0h8.588v8.595H0V0z" />
+																</g>
+															</g>
+														</g>
+													</svg></div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<hr class="section-product-details__line" />
+						<div class="section-product-details__cart">
+							<div class="section-product-details__cart-title">В вашей корзине (3)</div>
+							<div class="section-product-details__content">
+								<div class="table-product-row">
+									<div class="table-product-row__column">
+										<p class="text">Круг алюминиевый 1,5 мм АМГ6</p>
+									</div>
+									<div class="table-product-row__column">
+										<p class="text">3000</p>
+									</div>
+									<div class="table-product-row__column">
+										<p class="text">1,558 т.</p>
+									</div>
+									<div class="table-product-row__column">
+										<p class="text">Изменить</p>
+									</div>
+									<div class="table-product-row__column">
+										<p class="text">37 472 549 / р.</p>
+									</div>
+									<div class="table-product-row__column">
+										<div class="table-product-row__icon"><svg width="13" height="13" viewBox="0 0 13 13" xmlns="http://www.w3.org/2000/svg">
+												<path d="M11.747.434a1.48 1.48 0 0 0-2.095 0L6.091 3.996 2.528.434A1.48 1.48 0 1 0 .434 2.53l3.561 3.562L.434 9.653a1.482 1.482 0 0 0 2.094 2.095l3.563-3.562 3.561 3.562a1.482 1.482 0 0 0 2.095-2.095L8.186 6.091l3.561-3.562a1.48 1.48 0 0 0 0-2.095" fill="#454545" fill-rule="evenodd" opacity=".601" />
+											</svg></div>
+									</div>
+								</div>
+								<div class="table-product-row">
+									<div class="table-product-row__column">
+										<p class="text">Круг алюминиевый 1,5 мм АМГ6</p>
+									</div>
+									<div class="table-product-row__column">
+										<p class="text">3000</p>
+									</div>
+									<div class="table-product-row__column">
+										<p class="text">0,958 т.</p>
+									</div>
+									<div class="table-product-row__column">
+										<p class="text">Изменить</p>
+									</div>
+									<div class="table-product-row__column">
+										<p class="text">2 472 549 / р.</p>
+									</div>
+									<div class="table-product-row__column">
+										<div class="table-product-row__icon"><svg width="13" height="13" viewBox="0 0 13 13" xmlns="http://www.w3.org/2000/svg">
+												<path d="M11.747.434a1.48 1.48 0 0 0-2.095 0L6.091 3.996 2.528.434A1.48 1.48 0 1 0 .434 2.53l3.561 3.562L.434 9.653a1.482 1.482 0 0 0 2.094 2.095l3.563-3.562 3.561 3.562a1.482 1.482 0 0 0 2.095-2.095L8.186 6.091l3.561-3.562a1.48 1.48 0 0 0 0-2.095" fill="#454545" fill-rule="evenodd" opacity=".601" />
+											</svg></div>
+									</div>
+								</div>
+								<div class="table-product-row">
+									<div class="table-product-row__column">
+										<p class="text">Круг алюминиевый 2 мм АМГ6</p>
+									</div>
+									<div class="table-product-row__column">
+										<p class="text">3000</p>
+									</div>
+									<div class="table-product-row__column">
+										<p class="text">0,200 т.</p>
+									</div>
+									<div class="table-product-row__column">
+										<p class="text">Изменить</p>
+									</div>
+									<div class="table-product-row__column">
+										<p class="text">500 549 / р.</p>
+									</div>
+									<div class="table-product-row__column">
+										<div class="table-product-row__icon"><svg width="13" height="13" viewBox="0 0 13 13" xmlns="http://www.w3.org/2000/svg">
+												<path d="M11.747.434a1.48 1.48 0 0 0-2.095 0L6.091 3.996 2.528.434A1.48 1.48 0 1 0 .434 2.53l3.561 3.562L.434 9.653a1.482 1.482 0 0 0 2.094 2.095l3.563-3.562 3.561 3.562a1.482 1.482 0 0 0 2.095-2.095L8.186 6.091l3.561-3.562a1.48 1.48 0 0 0 0-2.095" fill="#454545" fill-rule="evenodd" opacity=".601" />
+											</svg></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<hr class="section-product-details__line" />
+						<div class="section-product-details__footer">
+							<div class="tabs">
+								<div class="tabs__buttons"><button class="tabs__button js-active" data-tab-button="1">Описание товара</button><button class="tabs__button" data-tab-button="2">Документы</button><button class="tabs__button" data-tab-button="3">Оплата и доставка</button><button class="tabs__button" data-tab-button="4">Расчитать по вашей смете</button></div>
+								<div class="tabs__body">
+									<div class="tabs__content js-active" data-tab-content="1">Арматура А240/А-I – гладкая арматура, относится к классу А-I, представляет собой металлический профиль, для изготовления которого используется легированная сталь с пониженным количеством углерода. Это единственная разновидность арматуры, которая не имеет рифления. Арматура А240 трактуется так: А - обозначает горячекатаный прокат, 240 – указывает на предел текучести металла и составляет 240 Н/мм2. Производится такая арматура методом горячей прокатки с дополнительным низкотемпературным отпуском, и именно благодаря этому достигается красивая ровная гладкая поверхность. Готовая арматура должна быть ровной, гладкой, без трещин и пятен, с правильной геометрией, не должно быть сколов и ржавчины. Гладкая арматура часто используют в качестве соединительных прутов для вязки каркаса, удерживая основные стержни в нужных местах. В качестве такого дополнительного компонента ее используют во многих типах сооружений, в том числе подземных и водных. Арматура А240 обладает рядом преимуществ: надежность, особенности производства позволяют использовать ее для создания сложных конструкций, расположенных на наиболее ответственных участках, устойчивость к любым видам коррозии, устойчивость перед воздействием химических и биологических факторов, отличная гибкость, твердость и высокий уровень прочности, доступная стоимость и довольно широкий ассортимент. Реализуется металлическая арматура либо в мотках, либо пачками в виде прутков.</div>
+									<div class="tabs__content" data-tab-content="2">Арматура А240/А-I – гладкая арматура, относится к классу А-I, представляет собой металлический профиль, для изготовления которого используется легированная сталь с пониженным количеством углерода. Это единственная разновидность арматуры, которая не имеет рифления. Арматура А240 трактуется так: А - обозначает горячекатаный прокат, 240 – указывает на предел текучести металла и составляет 240 Н/мм2. Производится такая арматура методом горячей прокатки с дополнительным низкотемпературным отпуском, и именно благодаря этому достигается красивая ровная гладкая поверхность. Готовая арматура должна быть ровной, гладкой, без трещин и пятен, с правильной геометрией, не должно быть сколов и ржавчины.</div>
+									<div class="tabs__content" data-tab-content="3">Арматура А240/А-I – гладкая арматура, относится к классу А-I, представляет собой металлический профиль, для изготовления которого используется легированная сталь с пониженным количеством углерода. Это единственная разновидность арматуры, которая не имеет рифления. Арматура А240 трактуется так: А - обозначает горячекатаный прокат, 240 – указывает на предел текучести металла и составляет 240 Н/мм2. Производится такая арматура методом горячей прокатки с дополнительным низкотемпературным отпуском, и именно благодаря этому достигается красивая ровная гладкая поверхность. Готовая арматура должна быть ровной, гладкой, без трещин и пятен, с правильной геометрией, не должно быть сколов и ржавчины.</div>
+									<div class="tabs__content" data-tab-content="4">Арматура А240/А-I – гладкая арматура, относится к классу А-I, представляет собой металлический профиль, для изготовления которого используется легированная сталь с пониженным количеством углерода. Это единственная разновидность арматуры, которая не имеет рифления. Арматура А240 трактуется так: А - обозначает горячекатаный прокат, 240 – указывает на предел текучести металла и составляет 240 Н/мм2. Производится такая арматура методом горячей прокатки с дополнительным низкотемпературным отпуском, и именно благодаря этому достигается красивая ровная гладкая поверхность. Готовая арматура должна быть ровной, гладкой, без трещин и пятен, с правильной геометрией, не должно быть сколов и ржавчины. Арматура А240/А-I – гладкая арматура, относится к классу А-I, представляет собой металлический профиль, для изготовления которого используется легированная сталь с пониженным количеством углерода. Это единственная разновидность арматуры, которая не имеет рифления. Арматура А240 трактуется так: А - обозначает горячекатаный прокат, 240 – указывает на предел текучести металла и составляет 240 Н/мм2. Производится такая арматура методом горячей прокатки с дополнительным низкотемпературным отпуском, и именно благодаря этому достигается красивая ровная гладкая поверхность. Готовая арматура должна быть ровной, гладкой, без трещин и пятен, с правильной геометрией, не должно быть сколов и ржавчины.</div>
+								</div>
+							</div><button class="section-product-details__button js-collapse">Развернуть</button>
+						</div>
+						<div class="section-product-details__footer-mobile">
+							<div class="section-product-details__filters"><a class="section-product-details__filter-value active" data-filter-categories="Тонны">Тонны</a><a class="section-product-details__filter-value" data-filter-categories="М2">М2</a><a class="section-product-details__filter-value" data-filter-categories="Шт.">Шт.</a></div>
+							<div class="section-product-details__counter-wrapper"><button class="section-product-details__minus"></button>
+								<p class="section-product-details__count">0,500 т</p><button class="section-product-details__plus"></button>
+							</div>
+							<div class="section-product-details__total-wrapper">
+								<p class="section-product-details__total">Итого:</p>
+								<div class="section-product-details__price-wrapper">
+									<p class="section-product-details__total-price">100 000</p>
+									<p class="section-product-details__value">p</p>
+								</div>
+								<p class="section-product-details__measure">≈ 0,500 т / 6,4 м2</p>
+							</div><button class="section-product-details__basket-btn">В корзину</button>
+							<p class="section-product-details__description">Нажимая вы соглашаетесь с условиями и политикой конфеденциальности</p>
+						</div>
+					</div>
+					<div class="block-layout__right">
+						<div class="section-product-details__product-item-details">
+							<p class="section-product-details__title">Лист горячекатный, 60мм, 1500х600</p>
+							<p class="section-product-details__subtitle">Просечно-вытяжной лист, 16 мм (изготавливается по технологии горячекатного листа)</p>
+							<div class="section-product-details__filters"><a class="section-product-details__filter-value active" data-filter-categories="Тонны">Тонны</a><a class="section-product-details__filter-value" data-filter-categories="М2">М2</a><a class="section-product-details__filter-value" data-filter-categories="Шт.">Шт.</a></div>
+							<div class="section-product-details__counter-wrapper"><button class="section-product-details__minus"></button>
+								<p class="section-product-details__count">0,500 т</p><button class="section-product-details__plus"></button>
+							</div>
+							<div class="section-product-details__total-wrapper">
+								<p class="section-product-details__total">Итого:</p>
+								<div class="section-product-details__price-wrapper">
+									<p class="section-product-details__total-price">100 000</p>
+									<p class="section-product-details__value">p.</p>
+								</div>
+								<p class="section-product-details__measure">≈ 0,500 т / 6,4 м2</p>
+							</div><button class="section-product-details__basket-btn">В корзину</button>
+							<p class="section-product-details__description">Нажимая вы соглашаетесь с условиями и политикой конфеденциальности</p>
+						</div>
+						<div class="calculation-order">
+							<p class="calculation-order__title">Рассчитайте стоимость заказа</p>
+							<div class="calculation-order__range"></div>
+							<p class="calculation-order__subtitle">Прикрепите вашу смету и наш менеджер сам рассчитает стоимость вашего заказа в соответствии с вашим обьемом</p>
+							<div class="calculation-order__presentation-wrapper"><img class="calculation-order__presentation-img" src="/images/logo.svg" alt="" />
+								<p class="calculation-order__presentation-info">Металлопрокат оптом и в розницу с доставкой по Москве и московской области</p>
+							</div><button class="calculation-order__btn">Прикрепить смету</button>
+							<p class="calculation-order__description">Нажимая вы соглашаетесь с условиями и политикой конфеденциальности</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section class="section-catalog" data-type-section="general">
 			<div class="container">
 				<div class="section-catalog__catalog-wrapper">
