--- a/order-reserve.html
+++ b/order-reserve.html
@@ -178,8 +178,8 @@
 												<p class="text text_wet-asphalt-80 text_fw-300 text_lh-1-14 section-order-reserve__text-data-registration">Выберите юридическое лицо, если заказ будет оформляться на ИП или ООО</p>
 												<form class="section-order-reserve__form"><label class="section-order-reserve__field-item section-order-reserve__field-item_field-m"><input class="section-order-reserve__item-inn" required="required" /><span>ИНН*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-m"><input required="required" /><span>Название компании</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Имя*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Фамилия*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Моб. телефон*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-x"><input required="required" /><span>Адрес доставки</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>E-mail</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-t"><textarea required="required"></textarea><span>Комментарий к заказу</span></label></form>
 												<div class="section-order-reserve__item-btn">Сохранить</div>
-												<div class="section-order-reserve__reserve-condition-title">Конфеденциальность личных данных</div>
-												<div class="section-order-reserve__reserve-condition-text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</div>
+												<p class="text text_fs-18 text_wet-asphalt text_fw-800 text_lh-1-1 section-order-reserve__reserve-condition-title">Конфеденциальность личных данных</p>
+												<p class="text text_fs-10 text_wet-asphalt-70 text_fw-300 text_lh-1-4 section-order-reserve__reserve-condition-text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p>
 											</div>
 										</div>
 										<div class="tabs__content" data-tab-content="2">
@@ -202,11 +202,11 @@
 							<div class="accordion__body">
 								<div class="section-order-reserve__info-way">Заполните данные для оформления заказа</div>
 								<div class="section-order-reserve__сompletion-reserve">
-									<div>Заказ №210522/1-MT</div>
-									<div>ИП Петров Иван</div>
+									<div class="section-order-reserve__сompletion-reserve-room">Заказ №210522/1-MT</div>
+									<div class="section-order-reserve__сompletion-reserve-name">ИП Петров Иван</div>
 								</div>
 								<div class="section-order-reserve__line-сompletion"></div>
-								<div class="accordion">
+								<div class="accordion accordion_fz-25">
 									<div class="accordion__title">Состав заказа</div>
 									<div class="accordion__body">
 										<div class="section-order-reserve__order-list">
@@ -282,8 +282,11 @@
 									</div>
 									<div class="section-order-reserve__summ section-order-reserve__summ_right">
 										<div class="section-order-reserve__warning-text">Копия документов на оплату отправлена на вашу электронную почту. В течении ближайшего времени с вами свяжеться менеджер, чтобы обсудить делали заказа.</div>
+										<div class="section-order-reserve__pdf-inner"><a class="section-order-reserve__pdf-text">Бланк заказа PDF</a>
+											<div class="section-order-reserve__active-until-text">(действителен до 21.05.2022)</div>
+										</div>
 									</div>
-								</div>
+								</div><button class="section-order-reserve__btn-cart section-order-reserve__btn-cart_reserve-completion">Завершить оформление</button>
 							</div>
 						</div>
 						<div class="section-order-reserve__line-small"></div>
